cs352/proj3/tests/syntax/invalid/1.js
<script type="text/JavaScript">
if(1)
	var a = 3;
}
</script>
